--- a/pages/group,a.html
+++ b/pages/group,a.html
@@ -24,7 +24,7 @@
             <a class="nav-link active" aria-current="page" href="https://librefutboltv.com/" target="_blank">vivo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/my.profile.html">paiseas</a>
+            <a class="nav-link" href="../index.html">inicio</a>
           </li>
         </ul>
       </div>
