--- a/pages/group,f.html
+++ b/pages/group,f.html
@@ -26,7 +26,7 @@
                             target="_blank">vivo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/my.profile.html">paiseas</a>
+                        <a class="nav-link" href="../index.html">inicio</a>
                     </li>
                 </ul>
             </div>
